--- a/py/MC_Demo.ipynb
+++ b/py/MC_Demo.ipynb
@@ -9,13 +9,485 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import datetime"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>s1</th>\n",
+       "      <th>s2</th>\n",
+       "      <th>s3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   s1  s2  s3\n",
+       "0   1   1   1\n",
+       "1   1   1   0\n",
+       "2   0   1   1\n",
+       "3   0   1   1\n",
+       "4   1   0   1\n",
+       "5   0   1   1\n",
+       "6   0   0   1\n",
+       "7   0   0   1\n",
+       "8   0   0   1\n",
+       "9   1   1   1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'s1':np.random.randint(2,size=10),'s2':np.random.randint(2,size=10),'s3':np.random.randint(2,size=10)}\n",
+    "df = pd.DataFrame(data, index=range(10))\n",
+    "df2 = df*2>1\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>交易达成日</td>\n",
+       "      <td>2021-06-25 00:00:00</td>\n",
+       "      <td>起始日</td>\n",
+       "      <td>2021-06-25 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>期末观察日</td>\n",
+       "      <td>2023-06-26 00:00:00</td>\n",
+       "      <td>结算日</td>\n",
+       "      <td>终止日后【3】个营业日内</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>标的证券</td>\n",
+       "      <td>中证500</td>\n",
+       "      <td>标的代码</td>\n",
+       "      <td>000905.SH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>名义本金额（人民币）</td>\n",
+       "      <td>50000000</td>\n",
+       "      <td>敲出收益率（年化）</td>\n",
+       "      <td>0.211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>是否年化</td>\n",
+       "      <td>非年化</td>\n",
+       "      <td>年化天数</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>期初价格（人民币）</td>\n",
+       "      <td>6813.41</td>\n",
+       "      <td>期末价格（人民币）</td>\n",
+       "      <td>【标的证券在期末观察日的收盘价格】</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>行权价格系数</td>\n",
+       "      <td>100</td>\n",
+       "      <td>敲入价格系数</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>敲出价格系数</td>\n",
+       "      <td>1</td>\n",
+       "      <td>敲出价格逐级调整系数</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>敲出观察日</td>\n",
+       "      <td>T1=</td>\n",
+       "      <td>2021/9/24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T2=</td>\n",
+       "      <td>2021/10/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T3=</td>\n",
+       "      <td>2021/11/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T4=</td>\n",
+       "      <td>2021/12/24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T5=</td>\n",
+       "      <td>2022/01/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T6=</td>\n",
+       "      <td>2022/02/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T7=</td>\n",
+       "      <td>2022/03/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T8=</td>\n",
+       "      <td>2022/04/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T9=</td>\n",
+       "      <td>2022/05/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T10=</td>\n",
+       "      <td>2022/06/24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T11=</td>\n",
+       "      <td>2022/07/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T12=</td>\n",
+       "      <td>2022/08/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T13=</td>\n",
+       "      <td>2022/09/26</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T14=</td>\n",
+       "      <td>2022/10/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T15=</td>\n",
+       "      <td>2022/11/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T16=</td>\n",
+       "      <td>2022/12/26</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T17=</td>\n",
+       "      <td>2023/01/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T18=</td>\n",
+       "      <td>2023/02/24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T19=</td>\n",
+       "      <td>2023/03/24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T20=</td>\n",
+       "      <td>2023/04/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T21=</td>\n",
+       "      <td>2023/05/25</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>T22=</td>\n",
+       "      <td>2023/06/26</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0                    1           2                    3\n",
+       "0        交易达成日  2021-06-25 00:00:00         起始日  2021-06-25 00:00:00\n",
+       "1        期末观察日  2023-06-26 00:00:00         结算日         终止日后【3】个营业日内\n",
+       "2         标的证券                中证500        标的代码            000905.SH\n",
+       "3   名义本金额（人民币）             50000000   敲出收益率（年化）                0.211\n",
+       "4         是否年化                  非年化        年化天数                  365\n",
+       "5    期初价格（人民币）              6813.41   期末价格（人民币）    【标的证券在期末观察日的收盘价格】\n",
+       "6       行权价格系数                  100      敲入价格系数                  0.8\n",
+       "7       敲出价格系数                    1  敲出价格逐级调整系数                    0\n",
+       "8        敲出观察日                  T1=   2021/9/24                  NaN\n",
+       "9          NaN                  T2=  2021/10/25                  NaN\n",
+       "10         NaN                  T3=  2021/11/25                  NaN\n",
+       "11         NaN                  T4=  2021/12/24                  NaN\n",
+       "12         NaN                  T5=  2022/01/25                  NaN\n",
+       "13         NaN                  T6=  2022/02/25                  NaN\n",
+       "14         NaN                  T7=  2022/03/25                  NaN\n",
+       "15         NaN                  T8=  2022/04/25                  NaN\n",
+       "16         NaN                  T9=  2022/05/25                  NaN\n",
+       "17         NaN                 T10=  2022/06/24                  NaN\n",
+       "18         NaN                 T11=  2022/07/25                  NaN\n",
+       "19         NaN                 T12=  2022/08/25                  NaN\n",
+       "20         NaN                 T13=  2022/09/26                  NaN\n",
+       "21         NaN                 T14=  2022/10/25                  NaN\n",
+       "22         NaN                 T15=  2022/11/25                  NaN\n",
+       "23         NaN                 T16=  2022/12/26                  NaN\n",
+       "24         NaN                 T17=  2023/01/25                  NaN\n",
+       "25         NaN                 T18=  2023/02/24                  NaN\n",
+       "26         NaN                 T19=  2023/03/24                  NaN\n",
+       "27         NaN                 T20=  2023/04/25                  NaN\n",
+       "28         NaN                 T21=  2023/05/25                  NaN\n",
+       "29         NaN                 T22=  2023/06/26                  NaN"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.read_excel('D:\\Proj\\Work\\Huaxi\\Derivatives\\snowball_terms.xlsx',header=None)\n",
+    "b = pd.read_excel('D:\\Proj\\Work\\Huaxi\\Derivatives\\人工估计的交易日_2年期雪球.xlsx',index_col=0)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-61-87264d2c72be>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "a.drop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2021-06-25 00:00:00')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = b.copy()\n",
+    "start = pd.to_datetime(a.loc[0, 3])\n",
+    "\n",
+    "d = c.loc[a.loc[0, 3]:a.loc[1, 1],:]\n",
+    "d.index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -491,6 +963,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
