--- a/py/HW2/TestCode_BasketSpread.ipynb
+++ b/py/HW2/TestCode_BasketSpread.ipynb
@@ -19,51 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-<<<<<<< HEAD
-    "#import option_models as opt\n",
-    "from option_models import basket\n",
-    "from option_models import bsm\n",
-    "from option_models import normal"
-=======
     "import pyfeng as pf\n",
     "\n",
     "#import option_models as opt\n",
     "from option_models import basket"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
-   "source": []
-=======
    "source": [
     "# A trivial test case 1: \n",
     "# one asset have 100% weight (the others zero)\n",
@@ -78,15 +49,11 @@
     "texp = 5\n",
     "strike = 120"
    ]
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
-<<<<<<< HEAD
-   "outputs": [],
-=======
    "outputs": [
     {
      "data": {
@@ -265,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n"
+      "27.967309091912323\n"
      ]
     }
    ],
@@ -287,228 +254,6 @@
      ]
     }
    ],
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
-   "source": [
-    "# A trivial test case 1: \n",
-    "# one asset have 100% weight (the others zero)\n",
-    "# the case should be equivalent to the BSM or Normal model price\n",
-    "\n",
-    "spot = np.ones(4) * 100\n",
-    "vol = np.ones(4) * 0.4\n",
-    "weights = np.array([0, 1, 0, 0])\n",
-    "divr = np.zeros(4)\n",
-    "intr = 0\n",
-    "cor_m = 0.5*np.identity(4) + 0.5\n",
-    "texp = 5\n",
-<<<<<<< HEAD
-    "strike = 120"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1. , 0.5, 0.5, 0.5],\n",
-       "       [0.5, 1. , 0.5, 0.5],\n",
-       "       [0.5, 0.5, 1. , 0.5],\n",
-       "       [0.5, 0.5, 0.5, 1. ]])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cor_m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 0 0]\n",
-      "26.92956987643586\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(weights)\n",
-    "\n",
-    "np.random.seed(123456)\n",
-    "price_basket = basket.basket_price_mc(strike, spot, vol*spot, weights, texp, cor_m, bsm=False)\n",
-    "print(price_basket)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26.92956987643586 26.570845957870503\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Compare the price to normal model formula\n",
-    "\n",
-    "norm1 = normal.NormalModel(vol=40, intr=0, divr = 0)\n",
-    "price_norm = norm1.price(strike=120, spot=100, texp=texp, cp=1)\n",
-    "print(price_basket, price_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.     0.9999 0.9999 0.9999]\n",
-      " [0.9999 1.     0.9999 0.9999]\n",
-      " [0.9999 0.9999 1.     0.9999]\n",
-      " [0.9999 0.9999 0.9999 1.    ]]\n",
-      "26.761395615904505 26.570845957870503\n"
-     ]
-    }
-   ],
-   "source": [
-    "# A trivial test case 2\n",
-    "# all assets almost perfectly correlated:\n",
-    "# the case should be equivalent to the BSM or Normal model price\n",
-    "\n",
-    "spot = np.ones(4) * 100\n",
-    "vol = np.ones(4) * 0.4\n",
-    "weights = np.ones(4) * 0.25\n",
-    "divr = np.zeros(4)\n",
-    "intr = 0\n",
-    "cor_m = 0.0001*np.identity(4) + 0.9999*np.ones((4,4))\n",
-    "texp = 5\n",
-    "strike = 120\n",
-    "\n",
-    "print( cor_m )\n",
-    "\n",
-    "np.random.seed(123456)\n",
-    "price_basket = basket.basket_price_mc(strike, spot, vol*spot, weights, texp, cor_m, bsm=False)\n",
-    "print(price_basket, price_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A full test set for basket option with exact price\n",
-    "\n",
-    "spot = np.ones(4) * 100\n",
-    "vol = np.ones(4) * 0.4\n",
-    "weights = np.ones(4) * 0.25\n",
-    "divr = np.zeros(4)\n",
-    "intr = 0\n",
-    "cor_m = 0.5*np.identity(4) + 0.5\n",
-    "texp = 5\n",
-    "strike = 100\n",
-    "price_exact = 28.0073695"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1. , 0.5, 0.5, 0.5],\n",
-       "       [0.5, 1. , 0.5, 0.5],\n",
-       "       [0.5, 0.5, 1. , 0.5],\n",
-       "       [0.5, 0.5, 0.5, 1. ]])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cor_m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28.168716545630815 28.0073695\n"
-     ]
-    }
-   ],
-   "source": [
-    "price_basket = basket.basket_price_mc(strike, spot, vol*spot, weights, texp, cor_m, bsm=False)\n",
-    "print(price_basket, price_exact)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# [To Do] Basket option implementation based on BSM model\n",
-    "## Write the similar test for BSM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28.27745472325051\n"
-     ]
-    }
-   ],
-   "source": [
-    "price_basket = basket.basket_price_mc(strike, spot, vol, weights, texp, cor_m, bsm=True)\n",
-    "print(price_basket)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 0 0]\n",
-      "28.751631082489702\n",
-      "1.8935501738856734e-112\n"
-     ]
-    }
-   ],
    "source": [
     "# A trivial test case 1: \n",
     "# one asset have 100% weight (the others zero)\n",
@@ -521,20 +266,12 @@
     "intr = 0\n",
     "cor_m = 0.5*np.identity(4) + 0.5\n",
     "texp = 5\n",
-=======
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
     "strike = 120\n",
     "\n",
     "print(weights)\n",
     "\n",
     "np.random.seed(123456)\n",
-<<<<<<< HEAD
-    "price_basket = basket.basket_price_mc(strike, spot, vol, weights, texp, cor_m, bsm=True)\n",
-    "print(price_basket)\n",
-    "print(normal.normal_formula(strike=120, spot=100, vol=0.4, texp=5))"
-=======
     "price_basket = basket.basket_price_mc(strike, spot, vol, weights, texp, cor_m, bsm=True)"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    ]
   },
   {
@@ -546,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0 28.713486748445934\n"
+      "28.51439365199859 28.713486748445934\n"
      ]
     }
    ],
@@ -565,11 +302,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 68,
-=======
    "execution_count": 14,
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,11 +322,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 69,
-=======
    "execution_count": 15,
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "metadata": {},
    "outputs": [
     {
@@ -622,13 +351,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 70,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-=======
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -643,57 +365,23 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "source": [
     "# Once the implementation is finished the BSM model price should also work\n",
-    "np.random.seed(123456)\n",
     "price_spread = basket.basket_price_mc(\n",
-<<<<<<< HEAD
-    "    strike, spot, vol, weights, texp, cor_m, intr=intr, divr=divr, bsm=True)"
-=======
     "    strike, spot, vol*spot, weights, texp, cor_m, intr=intr, divr=divr, bsm=True)\n",
     "price_spread"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.525394174202468"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "price_spread"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-=======
    "execution_count": 17,
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "8.5132252295455 8.525394174202468\n"
-=======
       "8.513225229545505 0.0\n"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
      ]
     }
    ],
@@ -714,11 +402,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 73,
-=======
    "execution_count": 18,
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,103 +414,40 @@
     "intr = 0\n",
     "cor_m = 0.5*np.identity(4) + 0.5\n",
     "texp = 5\n",
-    "strike = 120\n",
-    "cp = 1\n",
-    "n_samples = 10000"
+    "strike = 120"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21.010383316187788\n"
-     ]
-    }
-   ],
-   "source": [
-    "price1 = basket.basket_price_mc(\n",
-    "        strike, spot, vol, weights, texp, cor_m,\n",
-    "        intr, divr, cp, True, n_samples)\n",
-    "print(price1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19.3338717194432\n"
-     ]
-    }
-   ],
-   "source": [
-    "price2 = basket.basket_price_mc(\n",
-    "        strike, spot, spot*vol, weights, texp, cor_m,\n",
-    "        intr, divr, 1, False, 10000)\n",
-    "print(price2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[19.33039557 19.33039557 19.33039557 19.33039557]\n"
-     ]
-=======
    "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "19.330395569726363"
       ]
      },
      "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
     }
    ],
    "source": [
     "### Make sure that the analytic normal price is correctly implemented\n",
-<<<<<<< HEAD
-    "price3 = basket.basket_price_norm_analytic(strike, spot, vol*spot, weights, texp, cor_m, intr=intr, divr=divr)\n",
-    "print(price3)"
-=======
     "basket.basket_price_norm_analytic(strike, spot, vol*spot, weights, texp, cor_m, intr=intr, divr=divr)"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 77,
-=======
    "execution_count": 20,
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[22.67017605 22.49790555]\n"
+      "[22.29061434 22.23100108]\n"
      ]
     }
    ],
@@ -834,36 +455,36 @@
     "# Run below about 100 times and get the mean and stdev\n",
     "\n",
     "### Returns 2 prices, without CV and with CV \n",
-<<<<<<< HEAD
-    "price_basket = basket.basket_price_mc_cv(strike, spot, vol, weights, texp, cor_m)\n",
-    "print(price_basket)"
+    "price_basket = basket.basket_price_mc_cv(strike, spot, vol, weights, texp, cor_m, intr=intr, divr=divr)\n",
+    "print(price_basket)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of BasketPrices without CV is 21.698581  \n",
-      "  S.E. of BasketPrices without CV is 0.637213\n",
+      "Mean of BasketPrices without CV is 21.791504  \n",
+      "  S.E. of BasketPrices without CV is 0.610849\n",
       "\n",
       "\n",
-      "Mean of BasketPrices with CV is 21.740592  \n",
-      "  S.E. of BasketPrices with CV is 0.370115\n"
+      "Mean of BasketPrices with CV is 21.781331  \n",
+      "  S.E. of BasketPrices with CV is 0.348341\n"
      ]
     }
    ],
    "source": [
-    "prices_cv = []\n",
-    "prices_no_cv = []\n",
-    "for i in range(100):\n",
-    "    temp = basket.basket_price_mc_cv(strike, spot, vol, weights, texp, cor_m)\n",
-    "    prices_no_cv.append(temp[0])\n",
-    "    prices_cv.append(temp[1])\n",
+    "n = 100\n",
+    "prices_cv = np.zeros(n)\n",
+    "prices_no_cv = prices_cv.copy()\n",
+    "for i in range(n):\n",
+    "    temp = basket.basket_price_mc_cv(strike, spot, vol, weights, texp, cor_m, intr=intr, divr=divr)\n",
+    "    prices_no_cv[i]=temp[0]\n",
+    "    prices_cv[i]=temp[1]\n",
     "prices_cv_std = np.std(prices_cv, ddof = 1)\n",
     "prices_cv_mean = np.mean(prices_cv)\n",
     "prices_no_cv_std = np.std(prices_no_cv, ddof = 1)\n",
@@ -871,42 +492,13 @@
     "print('Mean of BasketPrices without CV is %f '% prices_no_cv_mean,'\\n' ,' S.E. of BasketPrices without CV is %f' % prices_no_cv_std)\n",
     "print('\\n')\n",
     "print('Mean of BasketPrices with CV is %f '% prices_cv_mean,'\\n' ,' S.E. of BasketPrices with CV is %f' % prices_cv_std)"
-=======
-    "price_basket = basket.basket_price_mc_cv(strike, spot, vol, weights, texp, cor_m)"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-<<<<<<< HEAD
-   "outputs": [],
-   "source": []
-=======
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(price_basket)"
-   ]
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "Python 3",
-=======
-   "display_name": "Python 3 (ipykernel)",
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
    "language": "python",
    "name": "python3"
   },
@@ -920,11 +512,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.8.5"
-=======
-   "version": "3.8.11"
->>>>>>> b8d5994cb5be7256617c0b900760028b4ffc6e69
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
